Update kermit to "new" version 189.  It appears that columbia only changes version number on major advancments.  Had to update to build a good set of diffs.

--- a/comm/kermit/kermit.1
+++ b/comm/kermit/kermit.1
@@ -1,4 +1,4 @@
-.TH KERMIT 1 LOCAL
+.TH KERMIT 1C LOCAL
 .SH NAME
 C-Kermit 5A(189) \- communications software for serial and network connections:
 file transfer, terminal connection, character-set translation, and script
