Updated trn from version 3.1 to 3.2 and added VERSION file

--- a/news/trn/trn.1
+++ b/news/trn/trn.1
@@ -1,4 +1,4 @@
-.\" $Id: trn.1,v 1.2 1993/07/26 19:13:46 nate Exp $
+.\" $Id: trn.1,v 1.3 1993/08/02 23:53:01 nate Exp $
 .\"
 .\" This software is Copyright 1991 by Stan Barber. 
 .\"
@@ -334,7 +334,7 @@ file.
 If you don't want to subscribe, all
 the remaining groups can be ignored by typing \*(L'N\*(R'.
 After any new newsgroups have been added, the \*(L'a\*(R' command also
-restricts the current set of newsgroups just like the \*(L'o\*(R' command
+restricts the current set of newsgroups just like the \*(L'O\*(R' command
 does.
 .Ip & 8
 Print out the current status of command-line switches and any newsgroup
@@ -1631,6 +1631,12 @@ default entry into a newsgroup, specify a high number, like 9999.
 sets the minimum number of minutes that must elaps before the active file
 is refetched to look for new articles.
 A value of 0 or using +z turns this off.
+.TP 5
+.B \-Z
+is used to select what style of database you want trn to access.
+Use \-Zt for thread files, \-Zo for overview files, and +Z for none.
+The default is whatever your newsadmin compiled into trn, and can
+be \-Zot to try to access either one.
 .TP 5
 .B \-/
 sets SAVEDIR to \*(L"%p/%c\*(R" and SAVENAME to \*(L"%a\*(R", which means
