--- a/util/mtools/Mattrib.1
+++ b/util/mtools/Mattrib.1
@@ -42,15 +42,18 @@ Hidden bit.  Used to make files hidden from DIR.  However,
 mdir
 is more cunning.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mattrib
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1)
 .SH BUGS
-Most versions of ATTRIB don't allow this many options.
+Most MSDOS versions of ATTRIB don't allow this many options.
