--- a/util/mtools/Mformat.1
+++ b/util/mtools/Mformat.1
@@ -34,6 +34,9 @@ An optional volume label.
 To format a diskette at a density other than the default, you must supply
 (at least) those command line parameters that are different from the
 default.
+.PP
+.I Mformat
+returns 0 on success or 1 on failure.
 .SH SEE ALSO
 mlabel(1)
 .SH BUGS
