--- a/util/mtools/Mlabel.1
+++ b/util/mtools/Mlabel.1
@@ -24,5 +24,8 @@ invalid label is specified,
 .I mlabel
 will change the label (and display the new label if the verbose mode is
 set).
+.PP
+.I Mlabel
+returns 0 on success or 1 on failure.
 .SH SEE ALSO
 mformat(1)
