--- a/util/mtools/Mren.1
+++ b/util/mtools/Mren.1
@@ -31,15 +31,20 @@ to move a file from one subdirectory to another.
 .I Mren
 may be used to rename directories.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mread
+returns 0 on success or 1 on failure.
 .SH SEE ALSO
 mcd(1)
 .SH BUGS
-MSDOS can't use REN to rename directories.
+Unlike the MSDOS version of REN,
+.I mren
+can be used to rename directories.
