--- a/util/mtools/Mtools.1
+++ b/util/mtools/Mtools.1
@@ -25,7 +25,7 @@ command as closely as practical.
 .PP
 MSDOS filenames are optionally composed of a drive letter followed by a
 colon, a subdirectory, and a filename.  Subdirectory names can use either
-the '/' or '\e\' separator.  The use of the '\e\' separator or wildcards
+the '/' or '\e' separator.  The use of the '\e' separator or wildcards
 will require the names to be enclosed in quotes to protect them from the
 shell.
 .PP
@@ -34,6 +34,27 @@ rules.  For example, '*' matches all MSDOS files in lieu of '*.*'.  The
 archive, hidden, read-only and system attribute bits are ignored during
 pattern matching.
 .PP
+Not all Unix filenames are appropriate in the MSDOS world.  The Mtools
+commands may have to alter Unix names to fit the MSDOS filename
+restrictions.  Most commands have a -v (verbose) option that will
+display the new names if they have been changed.  The following table
+shows some examples of filename conversions:
+.PP
+.in +0.5i
+.(b L
+.TS
+l l l.
+Unix name	MSDOS name	Reason for the change
+_	_	_
+thisisatest	THISISAT	filename too long
+emmet.gray	EMMET.GRA	extension too long
+prn.txt	XRN.TXT	PRN is a device name
+\.abc	X.ABC	null filename
+hot+cold	HOTXCOLD	illegal character
+.TE
+.)b
+.in
+.PP
 All options use the '-' (minus) flag, not '/' as you'd expect in MSDOS.
 .PP
 The
@@ -41,6 +62,9 @@ The
 command is used to establish the device and the current working
 directory (relative to the MSDOS filesystem), otherwise the default is
 assumed to be A:/.
+.PP
+All the Mtools commands return 0 on success, 1 on utter failure, or 2
+on partial failure.
 .SH SEE ALSO
 mattrib(1), mcd(1), mdel(1), mformat(1), mrd(1), mren(1), mtype(1),
 mcopy(1), mdir(1), mlabel(1), mmd(1), mread(1), mwrite(1)
