--- a/util/mtools/Readme
+++ b/util/mtools/Readme
@@ -1,3 +1,6 @@
+This version of mtools contains changes by David MacKenzie
+(djm@eng.umd.edu) to support the IBM RT under 4.3BSD (ACIS).
+
 				MTOOLS
 			      version 2.0
 
@@ -60,6 +63,9 @@ The manuals are very terse...  it's assumed that the reader is already
 familiar with MSDOS.
 
 Mcopy is really a front-end to the low level Mread and Mwrite commands.
+
+Please *DO* read the Configure file and the Release.notes (that's why 
+they're there...).
 
 Emmet P. Gray				US Army, HQ III Corps & Fort Hood
 ...!uunet!uiucuxc!fthood!egray		Attn: AFZF-DE-ENV
