--- a/util/mtools/Mcd.1
+++ b/util/mtools/Mcd.1
@@ -17,12 +17,17 @@ device and current working directory information is stored.  The default
 is '$HOME/.mcwd'.  Information in this file is ignored if the file is
 more than 6 hours old.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 directory name to be enclosed in quotes to protect it from the shell.
+.PP
+.I Mcd
+returns 0 on success or 1 on failure.
 .SH SEE ALSO
 mdir(1)
 .SH BUGS
-MSDOS doesn't use CD to change to another device.
+Unlike MSDOS versions of CD,
+.I mcd
+can be used to change to another device.
 .PP
 It may be wise to remove old .mcwd files at logout.
