--- a/util/mtools/Mcopy.1
+++ b/util/mtools/Mcopy.1
@@ -47,14 +47,17 @@ option is not in effect,
 .I mcopy
 asks whether or not to overwrite the file.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mcopy
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1), mread(1), mwrite(1)
 .SH BUGS
