--- a/util/mtools/Mdir.1
+++ b/util/mtools/Mdir.1
@@ -24,14 +24,17 @@ without displaying the file size or creation date.
 .PP
 An error occurs if a component of the path is not a directory.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mdir
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1)
 .SH BUGS
