--- a/util/mtools/Mrd.1
+++ b/util/mtools/Mrd.1
@@ -10,14 +10,17 @@ removes a directory from an MSDOS filesystem.
 .PP
 An error occurs if the directory is not empty.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 directory name to be enclosed in quotes to protect it from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mrd
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1), mmd(1)
 .SH BUGS
