--- a/util/mtools/Mtype.1
+++ b/util/mtools/Mtype.1
@@ -23,14 +23,17 @@ Strip high bit.
 .I Mtype
 will strip the high bit from the data.
 .PP
-MSDOS subdirectory names are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mtype
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1), mread(1)
 .SH BUGS
