--- a/util/mtools/Mwrite.1
+++ b/util/mtools/Mwrite.1
@@ -49,14 +49,17 @@ invalid name is specified,
 will change the name (and display the new name if the verbose mode is
 set).
 .PP
-MSDOS subdirectory names are are supported with either the '/' or '\e\'
-separator.  The use of the '\e\' separator or wildcards will require the
+MSDOS subdirectory names are are supported with either the '/' or '\e'
+separator.  The use of the '\e' separator or wildcards will require the
 names to be enclosed in quotes to protect them from the shell.
 .PP
 The
 .I mcd
 command may be used to establish the device and the current working
 directory (relative to MSDOS), otherwise the default is A:/.
+.PP
+.I Mwrite
+returns 0 on success, 1 on utter failure, or 2 on partial failure.
 .SH SEE ALSO
 mcd(1), mcopy(1), mread(1)
 .SH BUGS
