Updated top from 3.1-Beta to released version 3.2

--- a/util/top/Changes
+++ b/util/top/Changes
@@ -1,3 +1,21 @@
+Tue Jul 13 1993 - wnl (3.1 release)
+	More small changes and minor bug fixes.  Brought bsd44 up to date
+	and added modules for svr4.2 and IRIX.  Changed shar packaging to
+	use Rich Salz's cshar stuff.
+
+Wed Jul  7 1993 - wnl (3.1BETA)
+	More changes and bug fixes to Configure.  Applied some other
+	minor bug fixes and suggestions from the beta testers.  Added
+	the "metatop" shell script and the "installmeta" rule to the
+	Makefile to make handling multiple machine models and OS versions
+	easier.  Added INSTALL and FAQ files.
+
+Tue May 18 1993 - wnl (3.1BETA)
+	Changed Configure to be compatible with most SVR4 environments
+	(differing output from "ls -lg").  Also changed Configure,
+	Makefile.X, etc., to look for module files in the subdirectory
+	"machine" (thanks to Christos Zoulas).
+
 Tue Apr 20 1993 - wnl (3.1BETA)
 	Changed both occurences of "ls -1" in Configure to "ls".  This
 	SHOULD produce the same result, and has the advantage that it
