--- a/util/top/README
+++ b/util/top/README
@@ -1,7 +1,12 @@
                              TOP
-                         Version 3.1
+                         Version 3.2
 
                        William LeFebvre
+		     and a cast of dozens
+
+
+If you do not want to read this entire file, then at least read
+the section at the end entitled "KNOWN PROBLEMS".
 
 "top" is a program that will give continual reports about the state of
 the system, including a list of the top cpu using processes.  Version 3
@@ -41,45 +46,61 @@ a different architecture requires only adding a module.  Configure
 asks which module to use when it is configuring top.  See the file
 "Porting" for a description of how to write your own module.
 
-To compile and install "top", do the following:
-
-	./Configure
-
-The script will first create a list of architecture module names, then
-present it to you and ask you to choose one.  It is possible that no
-module currently exists to make top work on your machine.
-
-Thes script will then describe each tunable parameter in detail and ask
-you for its value.  Default values appear in brackets:  a simple return
-will instruct "Configure" to use the default.
-
-If everything goes correctly, "Configure" will end with 'To create the
-executable, type "make".'  Now type:
-
-	make
-
-and everything should compile smoothly.  Once compiled, top can be
-installed with:
-
-	make install
+To compile and install "top", read the file "INSTALL" and follow the
+diurections and advice contained therein.
 
 Once you have created a binary for one particular type of machine, you
 can reconfigure for another type with "./Configure modulename" where
 "modulename" is replaced with the appropriate module name.  All other
 parameter values are kept the same.
 
-People who want to use top on multi-processor Suns need to read
-README.sun4m in this directory.
-
 If you make any kind of change to "top" that you feel would be
 beneficial to others who use this program, or if you find and fix a bug,
 please send me the change.
 
-Enjoy!
+AVAILABILITY
 
 The latest version of "top" is always available via anonymous FTP from
 the host "eecs.nwu.edu" in the directory "/pub/top".  Additional modules
 will be made available in the directory "/pub/top/m".
+
+KNOWN PROBLEMS:
+
+Gnu CC
+
+Gnu CC likes very much to use its own include files.  Not being a gcc
+expert, I can't explain why it does this.  But I can tell you that in
+at least some instances that I have encounterd, the files in gnu-cc's
+"include/sys" directory are INCORRECT.  Unfortunately, using the
+standard include files with Gnu CC doesn't seem to produce a usable
+result, either.  If you feel you must use gcc to compile top, then I
+would recommend you make machine.o with CFLAGS=-I/usr/include, then
+make the rest of the object files normally.  This seems to work
+reasonably well.
+
+
+Multiprocessor Solaris 2 machines:
+
+There is a bug in the sunos5 module which prevents it from working
+correctly on machines that contain more than one processor (single
+processor sun4m machines seem to run just fine).  A fix is pending.
+
+
+System V R 4.2
+
+Load average and memory displays do not work.  The problem has been
+traced down to a potential bug in the "mem" driver.  The author
+of the svr42 module is working on a fix.
+
+
+Memory output overflow
+
+Some "well endowed" machines will cause top to overflow some of the
+fields in the memory line and the "SIZE" and "RES" columns.  Version
+3.2 will have an elegant fix for this (memory values over a certain
+value will be displayed in megabytes with a trailing "M").
+
+
 
 		William LeFebvre
 		Department of Electrical Engineering and Computer Science
