applied patches from Rich Murphy and added them to the INSTALL notes (should be renamed README.FreeBSD, probably)

--- a/print/tex/TeX01.5.INSTALL.NOTES-1.4
+++ b/print/tex/TeX01.5.INSTALL.NOTES-1.4
@@ -513,4 +513,61 @@ Notes on installing Gunther Schadow's TeX package under FreeBSD
   .I dvips.tex.
   .SH DIAGNOSTICS
   .LP
+*** TeX3.14/mf/MFwindow/Makefile~	Mon Aug  9 05:59:54 1993
+--- TeX3.14/mf/MFwindow/Makefile	Tue Aug 31 17:35:18 1993
+***************
+*** 11,17 ****
+  SITEDIR=..
+  CC=gcc
+  OPT=-g
+! CFLAGS=$(OPT) -I../$(SITEDIR)
+  SHELL=/bin/sh
+  RANLIB=/usr/bin/ranlib
+  
+--- 11,17 ----
+  SITEDIR=..
+  CC=gcc
+  OPT=-g
+! CFLAGS=$(OPT) -I../$(SITEDIR) -I/usr/X386/include
+  SHELL=/bin/sh
+  RANLIB=/usr/bin/ranlib
+  
+*** TeX3.14/man/Makefile~	Mon Aug  9 05:59:58 1993
+--- TeX3.14/man/Makefile	Tue Aug 31 17:44:22 1993
+***************
+*** 75,81 ****
+  		touch stamp-manpages
+  
+  install: stamp-manpages
+! 		-mkdir $(mandir)
+  		for nameone in $(manfiles);				\
+  	        do							\
+                    name=`basename $${nameone} .1`;			\
+--- 75,81 ----
+  		touch stamp-manpages
+  
+  install: stamp-manpages
+! 		-mkdir -p $(mandir)
+  		for nameone in $(manfiles);				\
+  	        do							\
+                    name=`basename $${nameone} .1`;			\
+*** Makefile.orig	Tue Aug 31 18:22:13 1993
+--- Makefile	Tue Aug 31 18:22:18 1993
+***************
+*** 388,394 ****
+  # Cleanup targets
+  #
+  clean: $(ALL:S/^/clean./g)
+! 	rm -f *~ #*# a.out *.o stamp-*
+  	cd ./scripts ; rm -f var.sed modes.mf dvidr.1 dvidr
+  	rm -r -f ./usr/*
+  
+--- 388,394 ----
+  # Cleanup targets
+  #
+  clean: $(ALL:S/^/clean./g)
+! 	rm -f *~ \#*\# a.out *.o stamp-*
+  	cd ./scripts ; rm -f var.sed modes.mf dvidr.1 dvidr
+  	rm -r -f ./usr/*
+  
 ---- End of TeX-01.5.diffs ----
