--- a/net/zircon/CHANGES
+++ b/net/zircon/CHANGES
@@ -1,3 +1,36 @@
+Changes in Version 0.44
+
+1) Lots of minor bug fixes and improvements.
+
+2) Slightly changed the look and handling of the user buttons. This
+seems to have fixed the scrolling problems.....
+
+3) There is a variable called history which controls the amount of
+text kept in windows. The default value is 50 lines. Yes, I know it
+ought to be on a per channel basis. It will be in the future when I
+reorganise the way that per channel info is handled.
+
+4) There is a new variable "ircnames" which is a list of ircnames you
+like to use. Just like nicks and servers. Ircnames are now editable
+but will not take effect until a server change.
+
+5) Server changes work better.
+
+6) ^V does *NOT* paste but inserts itself so that you can do inverse
+video.
+
+7) Typing return in the Channel entry no longer deletes the channel
+name.
+
+8) Time has been added to the User menus.
+
+9) brb and back will not cause deiconified windows to pop-up.
+
+10) A new variable operServer controls the automatic sending of irc
+operator logins. This will only happen if the server you connect to is
+the one set in operServer. This will change in the future and become
+more configurable on a per server basis.
+
 Changes in Version 0.43
 
 1) Added LUSERS to Servers menu
