Updated to version 1.1 (FCS)

--- a/devel/gic/README
+++ b/devel/gic/README
@@ -1,5 +1,5 @@
 		GIC -- The Graphical Interface to CVS
-			    Version 1.1b3
+			     Version 1.1
 			   by David Marwood
 		-------------------------------------
 
@@ -41,7 +41,7 @@ attached to any distribution of GIC.
 Obtaining GIC
 -------------
 GIC can be obtained by anonymous ftp from
-ftp.cpsc.ucalgary.ca:/pub/marwood/gic-1.1b3.tar.Z.
+ftp.cpsc.ucalgary.ca:/pub/marwood/gic-1.1.tar.Z.
 
 
 Thanks
