Fixed missing make clean target and updated to version 1.09 while I was at it.

--- a/net/zircon/CHANGES
+++ b/net/zircon/CHANGES
@@ -1,3 +1,368 @@
+Changes in 1.09
+
+1) You can Finger users now. Meta-F wioll finger the selection and
+Control-Double-1 will finger the person who sent the line.
+
+2) Tcl-dp V2.0 is now out and can be found on catless amongst other
+places.
+
+3) Added recognition of ^O as terminator for bold, inverese and
+underline in text. Bound this to Meta-O as well.
+
+Changes in 1.08
+
+1) Bug fixes for tk 3.3 window handling
+
+2) Added character palette. Type escape in the entry in a channel and
+you will get a palette of all the characters in your font. Click on
+the character and it will be inserted into the entry.
+
+3) Dialog handling is a little different in places. There is a new
+file selection dialog as well.
+
+4) tcl-dp 2.0 withdrawn as it was not released officially
+
+5) A DCC problem was fixed, but I dont know if this even made it out
+to the world......
+
+Changes in 1.07
+
+1) bug fixes..... You need my patched version of tcl-dp2.0 to run with 7.0.
+
+Changes in 1.06
+
+1) ctcp PID call now returns correct value.
+
+2) The window resizing problem in 1.05 has been fixed.
+
+3) Some changes due to the shift to tcl 7.0 semantics have been made.
+
+4) Added second parameter to Whois command
+
+Changes in 1.05
+
+1) Support for tcl 7.0b3, tk 3.3b3 and tcl-dp 2.0
+
+Changes in 1.04
+
+1) Added server and port number as parameters to STARTUP
+
+2) DCC send and get are now supported by programs that are execed by
+zircon. You can Close outstanding DCC offers and connections from the
+DCC sub-menu on the Users menu. The entries List and Close both give
+access to the same facility.
+
+3) Fixed bug in Services menu.
+
+4) Shift-click on leave button will quit zircon
+
+5) Shift-click on clear button will clear window and history.
+
+6) Fixed Vesa's menu bar problem
+
+7) Meta-b, Meta-v and Meta-u now insert the characters for bold,
+inverse and underline. Control-b now has its usual Emacs meaning.
+
+8) Altered the way on information is held internally. This is the
+start of a more global change to the way information is entered in the
+rc file.
+
+Changes in 1.03
+
+1) Added on STARTUP
+
+2) Fixed problem with case in on conditions
+
+3) Changed the format of the output from configure into the rc file.
+Also added key bindings to output.
+
+4) Added test for errors in rc files
+
+5) Improved error handling on server KILL
+
+Changes in 1.02
+
+1) Fix typo in split handling code
+
+2) Add error checking on send to server.
+
+Changes on 1.01
+
+1) Read the application default file from the zircon lib.
+
+2) Makefile fix
+
+3) Added lots more on condition possibilities
+
+Changes in 1.0
+
+1) The version number got changed.
+
+2) You can now set keyboard bindings on a per-channel or global basis.
+This is not much use to you unless you understand how zircon works!!
+It is undocumented at the moment till a better programming interface
+is provided for users.
+
+3) The manual is better
+
+4) The Makefile is better too.
+
+Changes in 0.54
+
+1) The Topics menu now hangs off the Label on the Topic. When it is
+greyed out you cant set the topic. You have to add topics in the rc
+file by hand.
+
+2) Icons can be set for each channel
+
+3) The Channel List will not appear until you ask for it
+
+4) Resizing of Friends is different - maybe not better but different
+
+5) Handling of netsplits ought to be cleaner
+
+6) New variable killPath which if set will cause the Path to be
+removed from kill messages.
+
+7) Channel logging to files is in. (Under Channel menu and in configuration)
+
+8) Incoming message and notices are timestamped when they are created.
+
+9) You can set default behaviour for popUp popDown noJump and quiet
+
+10) You can send Notices to users now
+
+11) Finger should now return an idle time.
+
+12) Control-Return in a msg/channel sends the string as a notice to
+the channel.
+
+13) You can set patterns for channel names and topics in the Channel
+List window.
+
+Changes in 0.53
+
+1) Escape to send an action is now deprecated please use Shift-Return
+instead
+
+2) A topic menu is included on the Channels menu on each channel now.
+Though currently it does nothing!!
+
+3) It is possible to set the font and colour of output from particular
+users in particular channels using X resources. Set the resources :
+
+<nick>Font <nick>Foreground <nick>Background <nick>ActionForeground
+<nick>ActionBackground 
+
+thusly:
+
+	zircon*£gb*fisForeground: black
+
+4) It is possible to ignore users, though certain things are hard to
+do as Zircon maintains such things as topics and modes. Thus it cannot
+ignore topic changes and maintain consistency Ideas welcome on this.
+The best way to set and clear ignores is through the Configuration
+panel People panel (formerly friends), however it is possible to
+toggle flags from users' menu buttons. This will work fine so long as
+you aren't trying to work with anything fancier than "nick!*@*", which
+is what the user button ignore uses.
+
+5) I have reproduced the resizing bug and it is *WEIRD*. It seems to
+happen when you have resized a window and the first line to it
+contains a *. Work that one out if you can!!
+
+6) DCC chat works a little better in this release, but the root of the
+problems lies in tcl-dp and its poor error handling. Remember to set
+hostIPAddress to your local ip address (though it will now prompt you
+for the value if you have not provided it).
+
+7) A Services menu has been added. This allows access to nickserv and
+noteserv as well as to a user configurable list of other services - a
+pullright menu of commands allows pre-defined messages to be sent.
+Currently there is a popup to let you enter any parameters you wish to
+send with the command.  Once the command has been sent, the reply will
+come back in a notice window and you can type further commands just
+like any other window. The format of the services variable is :
+
+	{ {nick server {Cmd1 Cmd2}} {nick2 server2 {cmd1 cmd2}} }
+
+The server field can be null but must be present. It is there to
+ensure that spoofing is harder. Thus the entry for nickserv (which is
+*BUILT IN*!!!)  would be :
+
+	{{nickserv service.de {HELP INFO....} }
+
+8) Bug fixes of course.
+
+9) Typing Meta-s in a window will insert the contents of the variable
+"smiley"....... default value is :-) Meta-j will take the current
+selection as a channel name and try to join it. Meta-m will take the
+current selection as a user name and open a message window to them.
+
+10) If you have altered the configuration other than through the
+Configuration panel, (by adding actions, aways etc.) then you will be
+prompted when you quit to see if you wish to save these changes.
+
+11) You can toggle between sednign everything Actions or as normal
+text by using the Actions button on the channel Mode menu.
+
+12) The resizing problem has been fixed, or at least worked round as
+it does seem to be a tk problem. This does mean however that you can
+get an insertion cursor in the text windows. The vanishing scrollbar
+is also fixed.
+
+13) If you have any on JOIN conditions (the only one supported at the
+moment) you will need to change any nicknames you have in them to be
+in the format nick!user@host (or nick!.*@.*) N.B. The pattern matching
+is *NOT* glob style but full tcl regexp so you have to have the .*
+rather than *! This does mean that you can do some rather powerful
+things though. Pattern matching is not case sensitive.
+
+Changes in 0.52
+
+1) Bug fixes
+
+2) Topics now show bold etc.
+
+3) Netsplits are detected and Users lost will have their buttons
+greyed out. I havent worked out a clean way of checking if they never
+come back though.....Suggestions? (I dont like timeouts...)
+
+4) There is a makefile and you have to create a zircon directory
+somewhere so that autloading can be used - it was all getting too big
+to work with.....
+
+5) Zircon tries to source a file called rc in the zircon directory so
+you can have a system wide rc file - useful for setting servers etc.
+
+6) Incoming DCC Chat calls will work but dont put too much faith in it
+just yet!!
+
+7) ^N (the inverse of ^P) has been added for windows.
+
+8) ^U now works in topics
+
+9) Setting the variable noPopup will cause the icon name for windows
+with activity to be changed from channel to *channel* rather than
+popping them up.
+
+8) Set variable friendsOn to 1 (default is 1 at the moment actually)
+and only those friends that are logged in will appear in your friends
+panel.
+
+9) Stats and Links replies are handled but are by no mean perfect yet!
+
+10) To delete something from one of the lists in the Configuration
+panels you now select the item and then hit delete, backspace or ^h.
+Multiple selections work in the IRC panel. Double click lets you edit
+the entry and there is also a delete button on there.
+
+11) There is an intermittent window resizing problem, but I cannot
+reproduce it so any pointers as to its source would be useful!!
+
+Changes in Version 0.51
+
+1) Bug fixes of course!!
+
+2) Friends menu will pop up when a notified friend signs on or off
+
+3) There is an OK button to dismiss the friends window rather than
+using the close.
+
+4) ON conditions are supported, but you have to know how to use them
+and I havent thought about what interface should be made available to
+people yet!
+
+5) The Jump item on the user menu controls whether or not windows
+scroll to the end whenever input is received.
+
+6) The Topic entry is different now as I am tryin gto get it so that
+it will display bolds etc. However this is not easy so it isnt all
+there yet.
+
+7) Bells will appear in the window as the underlined text BEEP.
+Marking the channel as quiet will turn off the actual beep.
+
+Changes in Version 0.50
+
+1) Pop up and Action keeps are working again..... (sorry)
+
+2) USERHOST has been added to the Users menu
+
+3) The Friends button will bring up a window with a scrolling list of
+buttons of users that are in the list userInfo set up in your rc file.
+You can do the usual usery things to these buttons. This list is
+configurable from the Configure panel.
+
+4) There is a new Configure button. Save does work and it renames your
+previous file to .zirconrc.bak. Using this is probably the best way to
+upgrade your .zirconrc.
+
+5) The Ban+Kick option on user menus allows you to ban and then kick a
+pestilential user in one go. Thanks to fis for inspiring the
+implementation of this one.
+
+6) Odd typos etc. corrected
+
+7) VERY IMPORTANT!!!!!! Some of the variables settable in .zirconrc
+have changed - in particular nickname, ircname, server and ircport no
+longer exist as user variables. The lists associated with channels
+have also gone and are replaced by a single list channelInfo which has
+entries of the form :
+	{channel {auto actions} {messages off} {auto Op} history checkTime ...}
+
+where
+	auto actions	are join open close menu
+	messages off	are JOIN KICK KILL LEAVE MODE QUIT TOPIC
+	auto OP		is a list of nicks (not yet supported)
+	.....		is anything else we need later
+
+Also gone are the friends and notify menu, replaced by a userInfo list
+with entries formatted thusly :
+entries of the form :
+	{nick {action} {auto ops} {reserved} {reserved}  ...}
+
+where
+	action		is notify
+	auto OP		is a list of channels
+	.....		is anything else we need later
+
+8) You now cannot try to set the topic when the channel is +t and you
+are not chanop.
+
+9) Notifies are in. See the format of the userInfo menu above. There
+is a notify button for each user. If you want notifies not to pop up
+but to go to the info window add ISON to the toInfo list. *NB* Marking
+notify on a user will *NOT* add them to the userInfo structure as in
+some previous releases!!
+
+10) New resources (isonFont, isonForeground, isonBackground
+isonActiveForeground and isonActiveBackground) that will alter the
+appearance of buttons on the friends menu when notify is set for that
+user and they are logged on. Also added are resources (xxxBackground,
+xxxActiveBackground and xxxAvtiveForeground) to complete the
+configuration of other user buttons (where xxx is either opertaor or
+speaker)
+
+11) There is now clear button on each channel window. This simply
+clears the window but does nothing to the history.
+
+12) Focus follows the mouse - s0 characters go the window in which you
+have the mouse. This probably ought to be configurable in some
+way.....
+
+13) There are various command lin eoptions :
+
+-j will not do auto-joins
+-z will not read the rc file
+-n nick
+-s server
+-p port
+
+Changes in versions 0.45 - 0.49
+
+So many that I called it 0.50.....
+
 Changes in Version 0.44
 
 1) Lots of minor bug fixes and improvements.
