--- a/net/zircon/README
+++ b/net/zircon/README
@@ -1,16 +1,23 @@
-Zircon Release 0.44Beta
+Zircon Release 1.09
 -----------------------
 
-This is an early Beta test release of Zircon, an X11 interface to Internet
-Relay Chat. The software is written in tcl/tk and uses the tcl-dp TCP
-extensions to provide network communications. Beta testers are asked
-to provide comments on the interface that the system provides and to
-test it under of a variety of conditions. Please resist the temptation
-to hack the code. We will reach a stable, proper release quicker if we
-can centralise changes to the program, however suggestions for
-improvements in the code will also be welcome. We areparticularly
+This is a release of Zircon, an X11 interface to Internet Relay Chat.
+The software is written in tcl/tk and uses the tcl-dp TCP extensions
+to provide network communications. Beta testers are asked to provide
+comments on the interface that the system provides and to test it
+under of a variety of conditions. Please resist the temptation to hack
+the code. We will reach a stable, proper release quicker if we can
+centralise changes to the program, however suggestions for
+improvements in the code will also be welcome. We are particularly
 interested in making the system useful for those users in groups where
 JIPS and other national character sets are used.
+
+Zircon was implemented as a way of learning tcl/tk and has taken about
+10 weeks to get to its current state of development. It has more
+features than you could possibly imagine and implements nearly
+everything that the irc II clients support as well as many other
+useful and interesting features. tcl/tk is a wonderful system and you
+need it on your machine *NOW*.
 
 Please send all reports, comments and suggestions to: 
 
@@ -20,7 +27,13 @@ We can also often be found on channel #GB and will keep open
 a channel #zircon when we are around. N.B. the user whose 
 nick is zircon has nothing to do with this progam.
 
-A mailing list for zircon users is being created - watch this space.
+Mail
+	zircon-request@newcastle.ac.uk
+
+to be added to the Zircon users mailing list. Messages to the mailing
+list should be sent to
+
+	zircon@newcastle.ac.uk
 
 Enjoy!
 
@@ -31,103 +44,90 @@ REQUIREMENTS
 
 The software has been developed using:
 
-	tcl	Version 6.7
-	tk	Version 3.2
-	tcl-dp	Version 1.0ak
+	tcl	Version 6.7		7.0b3
+	tk	Version 3.2		3.3b3
+	tcl-dp	Version 1.0ak		2.0
 
-You must have the dpwish program rather than the usual wish 
-for zircon to be runnable.
+N.B. tcl-dp 2.0 HAS NOT BEEN OFFICIALLY RELEASED YET and so is not
+currently available!!!!
 
-The system has *NOT* yet been tested with the new Beta 
-versions of tcl and tk. The code will minimally need to be 
-changed to conform to the new packer syntax.
+You must have the dpwish program rather than the usual wish for zircon
+to be runnable.
 
-KNOWN PROBLEMS
-
-This is a brain dump of all the difficulties that we can 
-remember. It really is'nt as bad as it looks - you can use 
-zircon for everyday chat in your favourite channel without 
-hitting any of them, unless you are unlucky or like to be in 
-JIPS channels! Our brave alpha testers can vouch for that.
-
-1) TCP error handling is rudimentary if not non-existent. 
-Tcl-dp does not have good error handling at the moment. It 
-may be worth investigating some of the other TCP packages for 
-tk, though they seem to have other problems.
-
-2) The code does not have enough comments and needs to be 
-cleaned up and generalised. A rewrite in [incr tcl] is on the 
-cards.
-
-3) Some of the more obscure IRC replies and commands are not 
-handled well.
-
-4) DCC and SED are not supported.
-
-5) Focus handling is not quite right yet.
-
-6) There should be a list of configurable resources.
-
-7) There is no JIPS support. In fact there are problems when you even
-attempt to join a group with JIPS characters in its name as tcl tries
-to interpret the $ characters in them.... I have tried the JIPS
-version of tcl but it didnt help.
-
-8) The two calls on "tkwait" in the code have been known to 
-cause problems at some sites and have been commented out.
-
-9) *FIXED*
-
-10) The layout of the channel text window could be much improved.
-
-11) Currently you can only have one each of the various possible
-information windows showing.
-
-12) The teledildonics feature is under powered.
-
-13) PID always returns 42
-
-14) UTC is recognised but doesnt work at all.
-
-15) Zircon ought to get the users IRCNAME from the gcos field in the
-password file if it is not supplied.
-
-16) CLIENTINFO doesnt work properly.
-
-17) You ought to be able to save stuff back to your .zirconrc file
-i.e. things like new actions and aways.
-
-18) Character escaping in the low level CTCP protocol is not done.
-
-19) CCTCP FINGER doesnt return idle time yet.
-
-20) There ought to be a better user manual
-
-
-NICE FEATURES
+tcl/tk is available from harbor.ecn.purdue.edu in the directory
+/pub/tcl. tcl-dp is available there also, but the latest version can
+always be found on catless.ncl.ac.uk which is also the home of zircon.
 
 You can configure lots of stuff using X resources, thus it is possible
-to make buttons associated with particular users appear in special
-colours and fonts. That's it really, except that the system is much
-easier to use than the usual UNIX interfaces to irc.
+to make buttons and text associated with particular users and channels
+appear in special colours and fonts. The system is much easier to use
+than the usual UNIX interfaces to irc and a lot of people ar eusing it
+on a day to day basis.
+
+INSTALLATION
+
+Make sure you have tcl and tk installed and have built tcl-dp.  Edit
+the Makefile and configure the path to dpwish, the name of the
+directory where zircon files are going to live, and where you want the
+main program to go. Then type
+
+	make install
+
+Now create a file called rc in the zircon directory. This acts as a
+system wide rc file for all zircon users. Minimally put in here the
+name of the default irc server that you wish users to connect to, and
+the default port if it is not 6667. Also useful would be the name of
+you rnearest irc help service :
+
+set defaultServer x.y.z
+set defaultPort 9999
+set helpService "help_XX"
+
+The file DOTzirconrc shows you what you might want to put in your
+.zirconrc file in your HOME directory, but any of that stuff can also
+go in the rc file in the zircon library directory. The HOME rc file
+overrides the system one.
+
+You will also want to edit the file zircon.ad which can be found in
+the zircon library directory. This contains application defaults for
+X resources and is read by zircon on startup. 
+
+HELP
+
+Mail problems to zircon@catless.ncl.ac.uk. The zircon mailing list can
+be joined by posting to zircon-request@newcastle.ac.uk and posted to
+at zircon@newcastle.ac.uk You can usually find help in the #zircon
+channel on IRC as well.
+
+
 
 POSSIBLE FUTURE FEATURES
 
 1) Automatic AWAY canceling when you type in a window.
 
-2) Simple ON conditions and the ability to Ignore users.
+2) Nice icons instead of boring old buttons and text - suggestions welcome.
 
-3) Combined kick and ban option.
+3) Face icons for users. Probably using the faces mail icon database.
 
-4) Nice icons instead of boring old buttons and text - suggestions welcome.
+4) Sound
 
-5) Better colour support. If we had a colour machine this would have
-been done already....
+5) Support for extended Server features
 
-6) Face icons for users. Probably using the faces mail icon database.
+KNOWN PROBLEMS
 
-7) Sound
+1) Zircon does not work with pre-2.8 servers.
 
-8) Support for extended Server features
+2) SED is not supported. DCC Chat is supported directly within Zircon
+but Send and get require binary I/O and are provided using external
+programs. Error handling is rudimentary at the moment.
 
-9) A configuration control panel
+3) There is no JIPS support. In fact there are problems when you even
+attempt to join a group with JIPS characters in its name as tcl tries
+to interpret the $ characters in them.... I have tried the JIPS
+version of tcl but it didnt help.
+
+4) Character escaping in the low level CTCP protocol is not done.
+
+5) There are some weird things that can happen with menu handling and
+when connections get closed suddenly. Some of these may be tcl/tk
+problems that will go when we move to the new release.
