Changes and minimal documentation of the changes made to this package. The Makefile changes are necessary to work correctly with the not quite as flexible scheme that Gunther setup, but I'd like to see the whole scheme changed to something similar to our large package Makefile setup.
It would be better to break this stuff down into separate packages as
well, since TeX is pretty much a stable system, while the dvi stuff changes
more rapidly.

--- a/print/tex/TeX01.5.INSTALL.NOTES-1.4
+++ b/print/tex/TeX01.5.INSTALL.NOTES-1.4
@@ -11,6 +11,10 @@ Notes on installing Gunther Schadow's TeX package under FreeBSD
 	$ patch <../TeX-01.5.diffs
 2) Before the xdvi previewer can be built, XFree86 must be installed, and:
 	$ ln -s /usr/X386/include/X11 /usr/include/X11
+
+Note: This is no longer necessary, but the xdvi package assumes X is installed
+in /usr/X386 now, as this is the default setup for most FreeBSD machines
+
 3) Edit TeX0.15/Makefile for your site [ by default, TeX is installed under
    /usr/local/ and fonts are generated for a laser printer (HP-style) at 360 
    dpi ].  Then:
@@ -32,6 +36,10 @@ Notes on installing Gunther Schadow's TeX package under FreeBSD
    	)
    And create a private TeX library in each TeX user's HOME directory:
    	$ cp -R ./usr/TeX $HOME/
+
+Note: This is no longer necessary, as a per-user TeX directory can be
+setup as outlined above, but it no required to run TeX.
+
 5) When running tex or latex or texi2dvi, TeX sometimes complains
    about missing metric files (.tfm).  If the corresponding MetaFont
    (.mf) files exist (in lib/TeX/mf/inputs), the metric can be
@@ -59,6 +67,12 @@ Notes on installing Gunther Schadow's TeX package under FreeBSD
    where res is the device resolution, then the font files should
    be kept separate.  E.g., 300 dpi and 360 dpi devices should use
    separate logins. ]
+
+Note: This is no longer ncessary, as both xdvi and dvips build their
+necessary fonts 'on the fly'.  However, because of this change, multiple
+device support was removed.  (But in general most folks will be using
+postscript printers anyway, or converting them from postscript to 
+dot-matrix or others via ghostscript)
 
 6) Finally, it is recommended that you get a copy of GNU's texinfo
    (and, in particular, texi2dvi for converting GNUS's .texi
